# teamjobs_django

./: .dockerignore  .editorconfig  .env.ci  .env.vault  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  Dockerfile  LICENSE  README.md  bandit.yaml  gunicorn.conf.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: pre-commit.yaml  test.yaml
api/: admin.py  fields.py  managers.py  models.py  schema.py  serializers.py  storages.py  urls.py  views.py
api/factories/: __init__.py  _factories.py
api/factories/utils/: addresses.py  areas.py  iterators.py  joblistings.py
api/management/commands/: populate_areas.py  populate_businesses.py  populate_categories.py  populate_certificates.py  populate_job_listings.py
api/migrations/: 0001_initial.py  0002_add_verbose_names_add_contact_joblisting.py  0003_joblisting_listing_created.py  0004_alter_category_options_area_api_area_state_valid.py  0005_alter_joblisting_business.py  0006_alter_joblisting_title_and_more.py  0007_alter_category_name.py  0008_certificate_api_certificate_unique_name_state.py  0009_joblisting_job_type.py  0010_remove_joblisting_job_type_joblisting_position_type.py  0011_alter_jobapplication_cv.py  0012_alter_area_options_alter_business_options_and_more.py  0013_alter_jobapplication_options_jobapplication_created_and_more.py  0014_rename_address_business_address_old.py  0015_business_address.py  0016_migrate_business_address_to_json.py  0017_remove_business_address_old.py  0018_alter_joblisting_certificates_required.py  0019_joblisting_description_html.py  0020_migrate_description.py  0021_remove_joblisting_description.py  0022_rename_description_html_joblisting_description.py  0023_alter_jobapplication_cv.py  0024_alter_jobapplication_last_name.py  0025_alter_jobapplication_cv.py
api/resources/: addresses.csv  area_locality_postcode.csv  areas_goldcoast_sunshine_coast.csv  categories.csv  certificates.csv  gnaf_public_qld_addresses.csv
docker/: entrypoint.sh  start.sh
teamjobsbackend/: asgi.py  scripts.py  urls.py  wsgi.py
teamjobsbackend/settings/: __init__.py
teamjobsbackend/settings/components/: common.py  logging.py  rest.py  security_headers.py  storage_and_files.py  user_auth.py
teamjobsbackend/settings/environments/: development.py  production.py  staging.py  tests.py
tests/: conftest.py
tests/api/: conftest.py  test_fields.py  test_management.py  test_models.py  test_serializers.py  test_storages.py  test_views.py
tests/api/factories/utils/: test_addresses.py  test_areas.py  test_iterators.py  test_joblistings.py
tests/api/factories/utils/resources/: addresses.csv  areas.csv
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
tests/users/: test_managers.py  test_middleware.py  test_models.py
users/: admin.py  factories.py  forms.py  managers.py  middleware.py  models.py  serializers.py
users/migrations/: 0001_initial.py  0002_alter_teamuser_email_alter_teamuser_phone.py  0003_alter_teamuser_options_and_more.py  0004_initial_site.py  0005_remove_teamuser_name_teamuser_first_name_and_more.py
